--- a/vue-cli-demo/package.json
+++ b/vue-cli-demo/package.json
@@ -14,8 +14,9 @@
     "echarts": "^5.2.1",
     "element-ui": "^2.13.2",
     "express": "^4.17.1",
+    "less-loader": "^6.0.0",
     "mysql": "^2.18.1",
-    "style-loader": "^0.19.1",
+    "node-sass": "^4.14.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
@@ -32,7 +33,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -45,8 +46,12 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass": "^1.49.9",
+    "sass-loader": "^7.3.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "style-loader": "^0.19.1",
+    "stylus-loader": "^6.2.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.6.2",
     "vue-loader": "^13.3.0",
